hphp/hack/test/enum_atom/typing/atom2.php.exp
File "atom2.php", line 25, characters 13-16:
An enum class label is required here, not a class constant projection. (Typing[4397])
File "atom2.php", line 26, characters 8-9:
Enum class labels are not allowed in this position. They are only allowed in function calls) (Typing[4396])
